--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -34,7 +34,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.12.2
         with:
           user: __token__
-          password: ${{ secrets.test_pypi_password }}
+          password: ${{ secrets.TEST_PYPI_PASSWORD }}
           repository_url: https://test.pypi.org/legacy/
 
       #- name: Publish distribution 📦 to PyPI
