simple lightning checkpoint callback (#39)
* checkpoint callback
* linter
* test

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+        os: ["ubuntu-22.04", "macOS-13", "windows-2022"]
         python-version: ["3.9", "3.12"]
         requires: ["latest"]
         include:
@@ -44,7 +44,7 @@ jobs:
       - name: Install package & dependencies
         run: |
           pip --version
-          pip install -e '.[test]' -U -q --find-links $TORCH_URL
+          pip install -e '.[test,extra]' -U -q --find-links $TORCH_URL
           pip list
 
       - name: Tests
@@ -60,7 +60,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
+          files: ./coverage.xml
           flags: unittests
           env_vars: OS,PYTHON
           name: codecov-umbrella
