--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -3,7 +3,7 @@ name: CI testing
 # see: https://help.github.com/en/actions/reference/events-that-trigger-workflows
 on: # Trigger the workflow on push or pull request, but only for the main branch
   push: {}
-  pull_request:
+  pull_request_target:
     branches: [main]
 
 defaults:
@@ -47,9 +47,17 @@ jobs:
           pip install -e '.[test,extra]' -U -q --find-links $TORCH_URL
           pip list
 
-      - name: Tests
+      - name: Tests with mocks
         run: |
-          coverage run --source litmodels -m pytest src tests -v
+          coverage run --source litmodels -m pytest src tests -v -m "not cloud"
+
+      - name: Test integrations
+        env:
+          LIGHTNING_USER_ID: ${{ secrets.LIGHTNING_USER_ID }}
+          LIGHTNING_API_KEY: ${{ secrets.LIGHTNING_API_KEY }}
+        run: |
+          coverage run --source litmodels -m pytest src tests -v -m cloud
+        timeout-minutes: 5
 
       - name: Statistics
         run: |
