--- a/.github/workflows/ci-cloud.yml
+++ b/.github/workflows/ci-cloud.yml
@@ -8,7 +8,7 @@ defaults:
     shell: bash
 
 jobs:
-  pytester:
+  integration:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -17,14 +17,13 @@ jobs:
         python-version: ["3.10"]
 
     # Timeout: https://stackoverflow.com/a/59076067/4521646
-    timeout-minutes: 35
+    timeout-minutes: 15
     env:
       TORCH_URL: "https://download.pytorch.org/whl/cpu/torch_stable.html"
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
